<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_background"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstLine"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ADD6DD"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:background="@mipmap/ic_logo1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/loginin_signup"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@mipmap/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="250dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Email"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="50dp"
            android:hint="@string/email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Password"
            android:background="@color/white"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_height="50dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ConfirmPassword"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUpButton2"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints"
        android:text="@string/sign_up"/>


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        android:layout_margin="70dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="end"
        android:id="@+id/lastLine"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/checkOutButton11"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/checkoutlogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/settingButton11"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/settingslogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkOutButton1"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/homelogo"
            app:layout_constraintEnd_toStartOf="@+id/checkOutButton1"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>