<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_background"
    tools:context=".LogIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstLine"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ADD6DD"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:background="@mipmap/ic_logo1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/loginin_main"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@mipmap/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/EmailField"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:singleLine="true"
        android:background="@color/white"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@+id/PasswordField"
        android:layout_marginBottom="20dp"

        />

    <androidx.appcompat.widget.AppCompatEditText
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:inputType="textPassword"
        android:id="@+id/PasswordField"
        android:hint="@string/password"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LogInButton_login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/log_in"
        android:background="@color/white"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/ProgressBarLogIn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_margin="70dp"
        app:layout_constraintBottom_toTopOf="@+id/EmailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="end"
        android:id="@+id/lastLine"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/checkOutButton_login"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/checkoutlogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/settingButton_login"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/settingslogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkOutButton_login"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/homelogo"
            app:layout_constraintEnd_toStartOf="@+id/checkOutButton_login"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>